samples/_failures_safe/1761416529_6b2fa6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a0d9511.c: In function ‘main’:
./samples/SAFE/__tmp_5a0d9511.c:145:5: error: expected declaration or statement at end of input
  145 |     }
      |     ^
